openwebrx (1.2.80) bullseye jammy; urgency=low

  * Added server-side background audio recording to MP3.
  * Audio recordings are shown at the "Files" page.
  * Audio recorder requires Linux "lame" package.
  * Sorted contents of "Files" page by creation time.
  * Sorted services in background decoding settings.
  * Retaining underlying modulation on mode changes.
  * Fixed typo in Northwood bookmarks.
  * Updated NRSC5 Python library.

openwebrx (1.2.79) bullseye jammy; urgency=low

  * Added configurable fax page length limit.
  * Added OWRX+ version to RepeaterBook agent string.
  * Shrunk SDRPlay rfgain_sel range to 0..27.
  * Refactored and improved web agents.
  * Added newer Yaesu radios to APRS (Geoffrey Phillips).
  * Fixed Leaflet geodesic line bugs (Stanislav Lechev).

 -- Marat Fayzullin <luarvique@gmail.com>  Fri, 14 Mar 2025 16:12:00 +0000

openwebrx (1.2.78) bullseye jammy; urgency=low

  * Randomized web refresh times for repeaters and receivers.
  * Introduced web refresh cutoff after several failures.
  * Added server lookup from callsigns to countries.
  * Added server lookup from MMSIs to countries.
  * Added more profiles to the default RTLSDR device.
  * Fixed NumericMapping bug.

 -- Marat Fayzullin <luarvique@gmail.com>  Fri, 28 Feb 2025 16:12:00 +0000

openwebrx (1.2.77) bullseye jammy; urgency=low

  * Refactored web data sources (EIBI, receivers, repeaters).
  * Fixed RepeaterBook updates to happen daily.
  * Fixed KiwiSDR receiver database updates.
  * Added aircraft and country lookup by ICAO ID (from TAR1090).
  * Added country and its flag to aircraft map bubbles.
  * Added OpenWebRX uptime display to Settings page.
  * Added Linux uptime display to Settings page.
  * Added receivers database update time to Settings page.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 17 Jan 2025 16:12:00 +0000

openwebrx (1.2.76) bullseye jammy; urgency=low

  * Refactored SSTV decoder code.
  * Eliminated FFTW3 race condition in SSTV decoder.